--- a/PalermoTiGuida/Classes/Views/IconLabelView/PTGIconLabelView.xib
+++ b/PalermoTiGuida/Classes/Views/IconLabelView/PTGIconLabelView.xib
@@ -11,7 +11,7 @@
             <rect key="frame" x="0.0" y="0.0" width="290" height="21"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="TYp-bJ-HvM">
+                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="TYp-bJ-HvM">
                     <rect key="frame" x="0.0" y="1" width="19" height="19"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 </imageView>
