--- a/PalermoTiGuida/Classes/Views/PTGCategoryCell.xib
+++ b/PalermoTiGuida/Classes/Views/PTGCategoryCell.xib
@@ -30,14 +30,14 @@
                         <rect key="frame" x="273" y="18" width="27" height="27"/>
                         <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                     </imageView>
-                    <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageWhenDisabled="NO" lineBreakMode="middleTruncation" id="D9q-dU-czy">
+                    <button opaque="NO" contentMode="scaleToFill" enabled="NO" selected="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageWhenDisabled="NO" lineBreakMode="middleTruncation" id="D9q-dU-czy">
                         <rect key="frame" x="208" y="17" width="46" height="29"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                         <fontDescription key="fontDescription" name="Helvetica-Bold" family="Helvetica" pointSize="13"/>
                         <state key="normal" title="11" backgroundImage="category_count_bg.png">
                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                         </state>
-                        <state key="disabled">
+                        <state key="disabled" backgroundImage="news_badge.png">
                             <color key="titleShadowColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         </state>
                     </button>
@@ -55,6 +55,7 @@
     <resources>
         <image name="arrow_image_selected.png" width="30" height="30"/>
         <image name="category_count_bg.png" width="56" height="41"/>
+        <image name="news_badge.png" width="31" height="20"/>
         <image name="table_middle_cell_bg.png" width="320" height="47"/>
         <image name="table_view_arrow.png" width="27" height="27"/>
     </resources>
